fix: bento grid not wrapping correctly

--- a/frontend/src/routes/home.module.css
+++ b/frontend/src/routes/home.module.css
@@ -143,9 +143,9 @@
   margin-top: 0.5rem;
 }
 
-.lockIcon {
+.secureIcon {
   width: 36px;
-  height: 51px;
+  height: 48px;
   flex: 1;
   display: flex;
   align-items: center;
@@ -156,7 +156,7 @@
   position: absolute;
 }
 
-.lockIcon .ring:nth-child(1) {
+.secureIcon .ring:nth-child(1) {
   width: 80px;
   height: 80px;
   transform: translate(-28%, 0);
@@ -164,7 +164,7 @@
   border: 1px solid rgba(var(--ring), 1);
 }
 
-.lockIcon .ring:nth-child(2) {
+.secureIcon .ring:nth-child(2) {
   content: "";
   width: 128px;
   height: 128px;
@@ -174,7 +174,7 @@
   border: 1px solid rgba(var(--ring), 0.7);
 }
 
-.lockIcon .ring:nth-child(3) {
+.secureIcon .ring:nth-child(3) {
   content: "";
   width: 176px;
   height: 176px;
@@ -182,6 +182,11 @@
   border-radius: 50%;
   position: absolute;
   border: 1px solid rgba(var(--ring), 0.4);
+}
+
+.lockIcon {
+  width: 36px;
+  height: 48px;
 }
 
 .footer {
@@ -199,5 +204,58 @@
     left: -16px;
     bottom: -30px;
     width: 130%;
+  }
+  .features {
+    margin-top: 20vh;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, minmax(40px, 1fr));
+    width: 100%;
+  }
+
+  .features div:nth-child(1) {
+    grid-column: 1;
+    grid-row: span 2;
+  }
+  .features div:nth-child(2) {
+    grid-column: 1;
+    grid-row: 3 / span 4;
+  }
+
+  .features div:nth-child(3) {
+    grid-column: 1;
+    grid-row: 7 / span 3;
+  }
+  .features div:nth-child(4) {
+    grid-column: 1;
+    grid-row: 10 / span 3;
+  }
+
+  .secureIcon {
+    width: 30px;
+    height: 42px;
+  }
+
+  .secureIcon .ring:nth-child(1) {
+    width: 72px;
+    height: 72px;
+    transform: translate(-29%, 0);
+  }
+
+  .secureIcon .ring:nth-child(2) {
+    width: 112px;
+    height: 112px;
+    transform: translate(-37%, 0);
+  }
+
+  .secureIcon .ring:nth-child(3) {
+    width: 148px;
+    height: 148px;
+    transform: translate(-40%, 0);
+  }
+
+  .lockIcon {
+    width: 30px;
+    height: 42px;
   }
 }
